--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,6 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v9.0.0
